--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
 Django==4.2.5
+gunicorn==21.2.0
+packaging==23.2
+psycopg2-binary==2.9.9
 sqlparse==0.4.4
-typing-extensions==4.8.0
+typing_extensions==4.8.0
 XlsxWriter==3.1.8
-gunicorn
