--- a/ansible_playbook.yml
+++ b/ansible_playbook.yml
@@ -57,9 +57,9 @@
         chdir: /opt/taskApp
     
     - name: Start migrations
-      command: docker exec -it task-managment-site-taskmanagmentsite-1 /bin/sh -c "/app/mig.sh"
-      args:
-        chdir: /opt/taskApp
+      shell:
+        cmd: docker exec -it task-managment-site-taskmanagmentsite-1 /bin/sh -c "/app/mig.sh"
+      ignore_errors: yes  # Ignore errors in case there are no images to remove
         
     - name: Restart Nginx
       shell:
